# my-site

./: 404.html  LICENSE  README.md  index.html  mkdocs.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
about/: index.html
blog/: index.html
blog/2023/12/25/diffusion-models---getting-the-intutions-behing-ddpms/: index.html
blog/2023/12/26/diffusion-models---the-maths/: index.html
blog/2024/02/01/overfit1-denoising-diffusion-probabilistic-models---basics-of-diffusion-models/: index.html
blog/2024/02/13/overfit2-from-ddpms-to-stable-diffusion-xl/: index.html
blog/2024/03/30/overfit5-ai-for-drug-discovery-an-introduction/: index.html
blog/category/alphafold/: index.html
blog/category/chemistry/: index.html
blog/category/computer-vision/: index.html
blog/category/diffusion-models/: index.html
blog/category/drug-discovery/: index.html
blog/category/embedding/: index.html
blog/category/llm/: index.html
blog/category/reinforcement-learning/: index.html
blog/category/robotics/: index.html
blog/category/ssl/: index.html
blog/category/video/: index.html
blog/page/2/: index.html
cv/: index.html
docs/: about.md  cv.md  index.md
docs/blog/: .authors.yml  index.md
docs/blog/posts/: 01_ddpm_1.md  02_ddpm_2.md  03_video_ldm.md  04_condition_text2img.md  05_drug_discovery_introduction.md  06_alphafold2_part1.md  06_condition_text2img.md  07_alphafold2_part2.md  08_alphafold2_part3.md  09_dino_v2.md  10_deepseek_r1.md  11_vjepa2.md  12_dinov3.md  ddpm_1.md  ddpm_1_intuitions.md  ddpm_2_maths.md
material/overrides/: home.html
(+9 files in other folders)
