[tool.poetry]
name = "mysite"
version = "0.1.0"
description = "Personal website with blog"
authors = ["LouisStefanuto <louis.stefanuto@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
mkdocs = "^1.5.3"
mkdocs-material = "^9.5.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
